# pytermux

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  setup.py
docs/: conf.py  index.rst  intro.rst
pytermux/: __init__.py  _audio_info.py  _battery_status.py  _brightness.py  _camera.py  _check.py  _class.py  _clipboard.py  _comm.py  _commands.py  _contacts.py  _dialog.py  _download.py  _exception.py  _fingerprint.py  _ir.py  _job_scheduler.py  _location.py  _media_player.py  _mic_record.py  _notif.py  _sensor.py  _sms.py  _telephony.py  _torch.py  _tts.py  _vibrate.py  _volume.py  _wallpaper.py  _wifi.py
