[tool.poetry]
name = "pytermux"
version = "1.1.3.2"
description = "Interact with Termux:API in Python"
authors = ["MrRare <mrrare.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
pytermux = 'pytermux._check:install'

[tool.poetry.metadata]
license = "GNU GPLv3"
